# rust-vk-middle

src/gfx/: Cargo.toml
src/gfx/src/: lib.rs
src/middle/: Cargo.toml
src/middle/src/: lib.rs
src/middle/src/icd/: data.rs  mod.rs
src/vk-sys/: Cargo.toml  build.rs
src/vk-sys/src/: lib.rs
